# dataops-env

./: .env  Dockerfile  README.md  app.py  hack.md  inference.py  openenv.yaml  out.txt  pyproject.toml  requirements.txt  submission_guide.md
dataops_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_env/: env.py  grader.py  models.py  tasks.py
server/: app.py
