[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataops-env"
version = "1.0.0"
description = "Autonomous DataOps RL environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "openai>=1.35.3",
    "requests>=2.32.3",
    "openenv-core",
    "python-dotenv",
]

[tool.setuptools]
packages = ["my_env", "server"]

[tool.openenv]
name = "dataops"
version = "1.0.0"
entry_point = "my_env.env:DataOpsEnv"
tasks = ["easy", "medium", "hard"]

[project.scripts]
server = "server.app:main"
